# godot-quickjs

./: .gitignore  CMakeLists.txt  Makefile  README.md  kbounce_quickjs.gdextension
.github/workflows/: build.yml
src/: quickjs_gdextension.cpp  quickjs_wrapper.cpp  quickjs_wrapper.h
